# CalcMaster

./: .gitignore  CMakeLists.txt  Folder.DotSettings  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
CalcMaster/: CMakeLists.txt  calc_master.c  calc_master.h  matrix_operations.c  matrix_operations.h  menu.c  menu.h  number_properties.c  number_properties.h  operations.c  operations.h
